# jasmine

./: README.md
backend/: .flaskenv  .gitignore  README.md  config.py  pyproject.toml  tests.py
backend/app/: __init__.py  models.py  routes.py
backend/app/api/: __init__.py  auth.py  errors.py  events.py  tokens.py  users.py
backend/app/errors/: handlers.py
backend/app/templates/: base.html
backend/app/templates/errors/: 404.html  500.html
backend/backend/: __init__.py  event.py
backend/migrations/versions/: 0caaf5cfb87b_user_tokens.py  3ed4e7d3ed5b_.py  74bb402885fb_.py
frontend/: index.html  package-lock.json  package.json
frontend-ts/: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend-ts/src/assets/: main.css
frontend-ts/src/components/: AppNavigation.vue  BaseModal.vue  Calendar.vue  CalendarForm.vue  CalendarModal.vue  CalendarNavigation.vue
frontend-ts/src/services/: api.ts  index.ts
frontend-ts/src/views/: HomeView.vue
frontend/src/components/: BaseModal.vue  Calendar.vue  CalendarForm.vue  CalendarModal.vue
frontend/src/views/: HomeView.vue
