[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["wmhe <william.he56@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "3.1.0"
flask-cors = "3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
